--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,3 @@
 spring:
-  data:
-    mongodb:
-      host: localhost
-      port: 27017
-      database: journaldb
-      auto-index-creation: true
-  main:
-    allow-circular-references: true
+  profiles:
+    active: dev
